# stm32Control

./: CMakeLists.txt  Project.uvguix.凉风  Project.uvoptx  Project.uvprojx  code-deen.c  code-deen.h  ov7670.c  ov7670.h
Listings/: Project.map  startup_stm32f10x_md.lst
Objects/: Project.axf  Project.build_log.htm  Project.htm  Project_Target 1.dep  main.crf
User/: main.c
